--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       transform: translate(-50%, -50%);
       text-align: center;
       width: 90%;
-      max-width: 900px; /* Увеличил ширину контейнера */
+      max-width: 900px;
       display: flex;
       gap: 40px;
       align-items: center;
